@startuml

title __MEDICALRECORDAPP's Class Diagram__\n

  namespace  {
    namespace om.example.medicalrecordapp {
      class com.example.medicalrecordapp.Date {
          - day : int
          - month : String
          - year : int
          + Date()
          + Date()
          + getDay()
          + getMonth()
          + getYear()
          + setDay()
          + setMonth()
          + setYear()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      class com.example.medicalrecordapp.Main {
          - filename : String
          - icon : String
          - records : ArrayList<RecordTemplate>
          {static} + main()
          + start()
          - loadList()
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      class com.example.medicalrecordapp.PatientRecord {
          + PatientRecord()
          + PatientRecord()
          + getType()
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      abstract class com.example.medicalrecordapp.RecordTemplate {
          # address : String
          # age : int
          # bloodPressure : String
          # bloodType : String
          # gender : String
          # height : double
          # name : String
          # number : String
          # picLocation : String
          # position : String
          # psychiatristName : String
          # remarks : String
          # weight : double
          + getAddress()
          + getAge()
          + getBirth()
          + getBloodPressure()
          + getBloodType()
          + getDateAdmitted()
          + getGender()
          + getHeight()
          + getName()
          + getNumber()
          + getPicLocation()
          + getPosition()
          + getPsychiatristName()
          + getRemarks()
          {abstract} + getType()
          + getWeight()
          + setAddress()
          + setAge()
          + setBirth()
          + setBloodPressure()
          + setBloodType()
          + setDateAdmitted()
          + setGender()
          + setHeight()
          + setName()
          + setNumber()
          + setPicLocation()
          + setPosition()
          + setPsychiatristName()
          + setRemarks()
          + setWeight()
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      class com.example.medicalrecordapp.StaffRecord {
          + StaffRecord()
          + StaffRecord()
          + getType()
      }
    }
  }
  

  com.example.medicalrecordapp.Main -up-|> javafx.application.Application
  com.example.medicalrecordapp.PatientRecord -up-|> com.example.medicalrecordapp.RecordTemplate
  com.example.medicalrecordapp.RecordTemplate o-- com.example.medicalrecordapp.Date : birth
  com.example.medicalrecordapp.RecordTemplate o-- com.example.medicalrecordapp.Date : dateAdmitted
  com.example.medicalrecordapp.StaffRecord -up-|> com.example.medicalrecordapp.RecordTemplate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
